--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "pnpm": ">=8.0.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0 -p 3000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
@@ -37,11 +37,15 @@
     "@radix-ui/react-tabs": "^1.1.13",
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@react-three/drei": "^10.7.7",
+    "@react-three/fiber": "^9.4.2",
     "@supabase/supabase-js": "^2.49.8",
     "@tanstack/react-query": "^5.90.11",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "html2canvas": "^1.4.1",
+    "iconv-lite": "^0.7.1",
     "lucide-react": "^0.511.0",
     "next": "^15.5.7",
     "pg": "^8.16.3",
@@ -57,6 +61,7 @@
     "sonner": "^2.0.7",
     "speakeasy": "^2.0.0",
     "tailwind-merge": "^3.3.0",
+    "three": "^0.182.0",
     "vaul": "^1.1.2",
     "zod": "^3.25.32"
   },
@@ -65,6 +70,7 @@
     "@tailwindcss/postcss": "^4",
     "@testing-library/jest-dom": "^6.5.0",
     "@testing-library/react": "^16.1.0",
+    "@types/html2canvas": "^1.0.0",
     "@types/node": "^20",
     "@types/qrcode": "^1.5.6",
     "@types/react": "^19",
@@ -77,6 +83,7 @@
     "lightningcss": "^1.30.2",
     "node-fetch": "^3.3.2",
     "node-gyp": "^12.1.0",
+    "prettier": "^3.7.4",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
     "tsconfig-paths": "^4.2.0",
