--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/generate-daily-diets",
       "schedule": "0 18 * * *"
+    },
+    {
+      "path": "/api/cron/daily-notifications",
+      "schedule": "0 9 * * *"
     }
   ]
 }
